# mmiocpp

./: .gitignore  AGENTS.md  Brewfile  CMakeLists.txt  CMakePresets.json  README.md  mmio_demo.cpp
.github/workflows/: coverage.yml  host.yml  qemu-m3.yml  qemu-r5.yml
assets/metrics/: summary.json  summary.md
cmake/: run_compile_fail_test.cmake
cmake/toolchains/: arm-none-eabi-gcc.cmake
examples/: access_example_registers.hpp  spi_example_registers.hpp
examples/stm32f429/: i2s_driver.hpp  spi_driver.hpp  spi_registers.hpp
include/: mmio.hpp
scripts/: bootstrap.ps1  bootstrap.sh  ci-coverage.ps1  ci-test-metrics.ps1  run-ci-coverage.ps1  run-ci-workflow.ps1
targets/: mmio_runtime_test_suite.hpp
targets/qemu-cortex-m/: linker.ld  mmio_target_tests.cpp  runtime.cpp  semihosting.hpp  startup.S
targets/qemu-cortex-r5/: linker.ld  mmio_target_tests.cpp  runtime.cpp  semihosting.hpp  startup.S
tests/: mmio_tests.cpp
tests/compile_fail/: and_assign_field_mask_from_different_register.cpp  and_assign_field_mask_from_different_register_local.cpp  and_assign_read_only_mask.cpp  and_assign_read_only_mask_local.cpp  and_assign_reg_value_instead_of_mask.cpp  and_assign_reg_value_instead_of_mask_local.cpp  and_assign_value_instead_of_mask.cpp  and_assign_value_instead_of_mask_local.cpp  and_assign_write_only_register_mask.cpp  and_assign_write_only_register_mask_local.cpp  assign_mask_to_register.cpp  assign_mask_to_register_local.cpp  assign_read_only_value.cpp  assign_read_only_value_local.cpp  assign_reg_value_from_different_register.cpp  assign_reg_value_from_different_register_local.cpp  assign_value_from_different_register.cpp  assign_value_from_different_register_local.cpp  assign_w1c_read_state.cpp  assign_w1c_read_state_local.cpp  assign_w1s_read_state.cpp  assign_w1s_read_state_local.cpp  asymmetric_value_helper_not_allowed.cpp  bit_field_value_not_public.cpp  get_field_from_different_register.cpp  get_field_from_different_register_local.cpp  get_write_only_field.cpp  get_write_only_field_local.cpp  mix_bit_and_raw_value_from_different_registers_reverse.cpp  mix_bit_and_value_from_different_registers.cpp  mix_bit_and_value_from_different_registers_raw.cpp  mix_bit_value_and_mask.cpp  mix_bit_value_and_mask_from_different_registers.cpp  mix_bit_values_from_different_registers.cpp  mix_bit_values_from_different_registers_reverse.cpp  mix_field_masks_from_different_registers.cpp  mix_field_masks_from_different_registers_reverse.cpp  mix_mask_and_bit_value.cpp  mix_mask_and_bit_value_from_different_registers.cpp  mix_mask_and_value.cpp  (+68 more)
